# gl_start

./: .gitattributes  CMakeLists.txt  readme.md
CMakeModules/: FindGLFW.cmake
content/models/: shitass.cob
content/shaders/: frag.glsl  frag2.glsl  frag_lit.glsl  frag_unlit.glsl  masterfrag.glsl
custom_filetypes/: cob.h
include/: defs.hpp  math.hpp  render.hpp  time.hpp
include/content/: binaryio.hpp  filesystem.hpp
include/loaders/: objloader.hpp  textloader.hpp  textureloader.hpp
include/objects/: renderobject.hpp
include/rendering/: modelrender.hpp  objectrender.hpp  render.hpp  shaders.hpp
src/: main.cpp  math.cpp  render.cpp
src/content/: binaryio.cpp  filesystem.cpp
src/loaders/: objloader.cpp  textloader.cpp  textureloader.cpp
src/objects/: renderobject.cpp
src/rendering/: modelrender.cpp  objectrender.cpp  projection.cpp  render.cpp  shaders.cpp
